<?xml version="1.0"?>
<package format="2">
  <name>thorvald_um7</name>
  <version>0.0.5</version>
  <description>This is modified from the original um7 package to correct the coordinate system
    so that it conforms with REP 145 and 103 (the original package seems to no longer be maintained).
    The um7 package provides a C++ implementation of the CH Robotics serial protocol, and a 
    corresponding ROS node for publishing standard ROS orientation topics from a UM7.
  </description>

  <maintainer email="mhutchinson@sagarobotics.com">Michael Hutchinson</maintainer>
  <author email="mhutchinson@sagarobotics.com">Michael Hutchinson</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="rbirac@cox.net">Alex Brown</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>serial</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslint</test_depend>
</package>
